try -XX:+UnlockExperimentalVMOptions and -XX:+UseZGC